Logo added and Navbar customisation

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="top">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            Vintage Car Hire</a>
+          <a class="navbar-brand" href="#"><img src="images/car-rental-64.png" alt="Sydney Vintage Car Hire" width="30" height="24" class="d-inline-block align-text-top">&nbsp;
+            VSCH</a> 
           <!-- navbar toggle button -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -147,7 +147,7 @@
 
         <!-- footer  -->
         <footer>
-            <p>Copyright © 2021 All rights reserved. | <a href="#top">Click To Top</a></p>
+            <p>Copyright © 2021 All rights reserved. | <a href="#">Click To Top</a></p>
         </footer>
         <!-- end of footer -->
 
